--- a/app.css
+++ b/app.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 10px 20px;
     color: var(--purple);
     background-color: rgb(248, 248, 234);
     font-family: sans-serif;
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-    font-size: 54px;
+    font-size: 40px;
     text-transform: uppercase;
 }
 
